# eva

./: Cargo.toml  KEYS.md  README.md  RELEASE_NOTES.md  build.rs
data/: eva.desktop  org.codeberg.jeang3nie.eva.desktop  org.codeberg.jeang3nie.eva.gschema.xml  org.hitchhiker-linux.eva.desktop
data/freebsd/: +MANIFEST  plist
src/: lib.rs  main.rs
src/bookmarks/: mod.rs
src/config/: fonts.rs  mod.rs
src/gui/: actions.rs  gemview.css  main.ui  mod.rs
src/gui/dialogs/: mod.rs  prefs.ui
src/gui/dialogs/prefs/: imp.rs  mod.rs  prefs.ui
src/gui/tab/: bookmark_editor.rs  input.rs  label.rs  mod.rs
src/gui/tab/bookmark_editor/: bookmark_editor.ui  imp.rs  mod.rs
src/gui/tab/controls/: controls.ui  imp.rs  mod.rs
src/gui/tab/input/: imp.rs  input.ui  mod.rs
src/gui/tab/label/: imp.rs  label.ui  mod.rs
src/gui/uri/: mod.rs
src/history/: mod.rs
src/keys/: mod.rs
src/mime/: macos.rs  mod.rs  unix.rs  windows.rs
src/prelude/: mod.rs
src/uri/: mod.rs
src/widgets/: mod.rs
src/widgets/application/: actions.rs  imp.rs  mod.rs
src/widgets/bookmark_editor/: imp.rs  mod.rs
src/widgets/preferences_window/: imp.rs  mod.rs  preferences_window.ui
src/widgets/tab/: imp.rs  mod.rs  tab.ui
src/widgets/window/: gemview.css  imp.rs  mod.rs  style.css  window.ui
src/window/: imp.rs  mod.rs  window.ui
xtask/: Cargo.toml
xtask/src/: main.rs
