[package]
name = "eva"
authors = ["Nathan Fisher"]
description = "A gemini (and Gopher/Finger) browser in Gtk4"
homepage = "https://codeberg.org/jeang3nie/eva"
repository = "https://codeberg.org/jeang3nie/eva"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0"
keywords = ["gemini", "gopher", "gtk", "nettwork"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
png-icons = ["resvg", "usvg", "tiny-skia"]

[dependencies]
#gemview = "0.3"
gemview = { git = "https://codeberg.org/jeang3nie/gemview" }
mime_open = "~0.1"
lazy_static = "~1.4"
fastrand = "~1.7"
toml = "~0.5"
url = "~2.2"
urlencoding = "2.1"

[dependencies.chrono]
version = "~0.4"
features = ["std"]

[dependencies.gtk]
version = "~0.4"
package = "gtk4"

[dependencies.rgba_simple]
version = "0.6"
features = ["gdk"]

[dependencies.serde]
version = "~1.0"
features = ["derive"]

[build-dependencies]
resvg = { version = "0.22", optional = true }
usvg = { version = "0.22", optional = true }
tiny-skia = { version = "0.6", optional = true }

[profile.release]
panic = 'abort'
lto = true
codegen-units = 1
