[package]
name = "eva"
authors = ["Nathan Fisher"]
description = "A gemini (and Gopher/Finger) browser in Gtk4"
homepage = "https://codeberg.org/jeang3nie/eva"
repository = "https://codeberg.org/jeang3nie/eva"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0"
keywords = ["gemini", "gopher", "gtk", "nettwork"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gemview = "0.4"
mime2ext = "0.1"
mime_open = "~0.1"
lazy_static = "~1.4"
fastrand = "~1.7"
toml = "~0.5"
url = "~2.2"
urlencoding = "2.1"

[dependencies.chrono]
version = "~0.4"
features = ["std"]

[dependencies.gtk]
version = "~0.4"
package = "gtk4"

[dependencies.rgba_simple]
version = "0.6"
features = ["gdk"]

[dependencies.serde]
version = "~1.0"
features = ["derive"]

[profile.release]
lto = true
codegen-units = 1
strip = true
