[package]
name = "eva"
authors = ["Nathan Fisher"]
description = "A gemini (and Gopher/Finger) browser in Gtk4"
homepage = "https://codeberg.org/jeang3nie/eva"
repository = "https://codeberg.org/jeang3nie/eva"
version = "0.4.1"
edition = "2021"
license = "GPL-3.0"
keywords = ["gemini", "gopher", "gtk", "network"]
categories = ["gui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#gemview = "0.5"
#gemview = { git = "https://codeberg.org/jeang3nie/gemview" }
gemview = { path = "../gemview" }
mime2ext = "0.1"
mime_open = "0.2"
lazy_static = "1.4"
fastrand = "1.7"
once_cell = "1.16"
toml = "0.5"
url = "2.2"
urlencoding = "2.1"

[dependencies.chrono]
version = "0.4"
features = ["std", "serde"]

[dependencies.gtk]
version = "0.5"
package = "gtk4"

[dependencies.adw]
version = "0.2"
package = "libadwaita"

[dependencies.rgba_simple]
version = "0.8"
features = ["gdk", "serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[profile.release]
lto = true
codegen-units = 1
strip = true
